# gradio-dataframe-download

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
backend/dataframe_download/: __init__.py  component.py
demo/: app.py  requirements.txt  space.py
frontend/: Index.svelte  package.json  pnpm-lock.yaml
frontend/shared/: DataFrameDownload.svelte  DataFrameDownloadButton.svelte
